# pl0

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: basic.pl0  fact.pl0  fib.pl0  primes.pl0
src/: ast_eval.rs  ast_ir.rs  context.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
template/: pl0.py
tests/: cli.rs  pl0.rs
