[package]
name = "pl0"
version = "0.1.0"
authors = ["qiufeng"]
description = "A simple intepreter/compiler for pl0"
edition = "2021"
license = "MIT"

[lib]
name = "pl0"
path = "src/lib.rs"

[[bin]]
name = "pl0"
path = "src/bin/pl0.rs"

[dependencies]
thiserror = "1"
clap = { version = "4", features = ["derive"] }
assert_cmd = "2"
predicates = "2"